Mon Jul 21 06:45:45 1997  Gary Houston  <ghouston@actrix.gen.nz>

	* boot-9.scm (dup->port, dup->inport, dup->outport, dup->fdes,
	dup, fdes->inport, fdes->outport, port->fdes): new procedures.
	(duplicate-port): was a C primitive, now it's here.
	(move->fdes): allow the first argument to be a file descriptor.
	Return the modified port or file descriptor (was unspecified.)

Fri Jul 11 00:13:43 1997  Jim Blandy  <jimb@floss.red-bean.com>

	Changes to compile under gnu-win32, from Marcus Daniels:
	* boot-9.scm (load-user-init): If HOME is unset, provide
	a default of /.

	* boot-9.scm (define-public): Changed to accomodate Hobbit.

Tue Jun 24 00:31:47 1997  Jim Blandy  <jimb@floss.red-bean.com>

	* boot-9.scm, debug.scm, hcons.scm, lineio.scm, mapping.scm,
 	poe.scm, slib.scm, tags.scm, threads.scm: Use normal list
	notation, instead of #/ notation.

	* expect.scm (expect-strings): Pass regexp/newline flag to
	make-regexp.

Mon Jun 23 16:13:38 1997  Jim Blandy  <jimb@floss.red-bean.com>

	Fix inconsistencies in parsing of #/ style lists.
	* boot-9.scm (read-path-list-notation): New function.
	(parse-path-symbol): Deleted.  Replaced by above.
	Plug in read-path-list-notation as the parser for #/ lists,
	instead of the anonymous lambda form calling parse-path-symbol.
	(Thanks to Maurizio Vitale.)
	
	* boot-9.scm (make-list): Remove the definition of this function
	from the (ice-9 common-list) module; make the `init' argument
	optional in the	scm module's definition, to match the deleted
	definition.  Harmony reigneth?  (Thanks to Bernard URBAN.)

Sun Jun 22 18:33:17 1997  Jim Blandy  <jimb@floss.red-bean.com>

	Try to detect when people are using one version of libguile and a
	different version of ice-9.  People have been skewing things and
	sending in bug reports.
	* version.scm.in: New file, which the configure script munges to
	produce version.scm, which contains the ice-9 config stamp.
	* boot-9.scm: Compare the libguile and ice-9 config stamps;